Add forgot_password and reset_password endpoint
