# src/interfaces/handler.go
@@ -38,10 +38,10 @@ func NewRouter() *mux.Router {
 	router.HandleFunc("/users/signup", users.Signup).Methods("POST")
 	router.HandleFunc("/users/login", users.Login).Methods("POST")
 	router.HandleFunc("/users/validateMail", users.ValidateMail).Methods("POST")
-	router.HandleFunc("/users/me", users.Me).Methods("GET")
+	router.HandleFunc("/users/forgot_password", users.ForgotPassword).Methods("POST")
+	router.HandleFunc("/users/reset_password", users.ResetPassword).Methods("POST")
 	router.Handle("/users/logout", middleware.ValidateTokenMiddleware(http.HandlerFunc(users.Logout))).Methods("POST")
 	router.Handle("/users/refresh", middleware.ValidateTokenMiddleware(http.HandlerFunc(users.Refresh))).Methods("POST")
-	router.HandleFunc("/users/forgot-password", users.ForgotPassword).Methods("POST")
 
 	// Videos endpoints
 	router.Handle("/videos", middleware.ValidateTokenMiddleware(http.HandlerFunc(videos.List))).Methods("GET")
