# src/interfaces/request/link_videos.go
@@ -1,6 +1,10 @@
 package request
 
-import "errors"
+import (
+	"errors"
+
+	"github.com/go-playground/validator/v10"
+)
 
 type Terrain string
 
@@ -10,11 +14,17 @@ const (
 )
 
 type LinkVideos struct {
-	VideoIds []string `json:"videoIds" example:"5f5e3e4e-3e4e-5f5e-3e4e-5f5e3e4e3e4e"`
-	Terrain  Terrain  `json:"terrain" example:"offroad"`
+	VideoIds []string `json:"videoIds" validate:"required" example:"5f5e3e4e-3e4e-5f5e-3e4e-5f5e3e4e3e4e"`
+	Terrain  Terrain  `json:"terrain" validate:"eq=road|eq=offroad" example:"offroad"`
 }
 
 func (lv *LinkVideos) Validate() error {
+	validate := validator.New()
+	err := validate.Struct(lv)
+	if err != nil {
+		return err
+	}
+
 	if len(lv.VideoIds) < 2 {
 		return errors.New("at least 2 video ids are required")
 	}
